Added and documented new route to pull sensors by filters.  In the process, fixed the Device->Search to actually filter the way the documentation says (including attributes of the cabinets, which it did not, before).  #1341
